--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -71,6 +71,8 @@
  CHN_artillery_industry_organisation: "中国火炮企业"
  CHN_transportation_industry_organisation: "中国载具企业"
  CHN_naval_industry_organisation: "中国海军企业"
+ CHN_armour_industry_organisation: "中国装甲企业"
+ CHN_automobile_industry_organisation: "中国汽车企业"
 
  china_mio_arsenal_integration_decision_category: "建立中国本土国防企业"
  china_mio_arsenal_integration_decision_category_desc: "几十年的内战给中国留下的希望并不多，其中之一，便是各势力投入大笔军费为现代军工复合体奠定的坚实基础。但是，困难也有不少：腐败、缺乏经验和战时混乱等都是常见问题；而且中国士兵手里的武器要么是进口的，要么是国外设计、国内制造的，这制约了国内军工业的发展。此外，由于军阀的地方主义，大部分大型兵工厂设施都非常分散，严重缺乏协调，在统一之路上，我们必须占领、整合这些军工企业，充分释放中国这个工业巨人的潜力！"
@@ -132,14 +134,21 @@
  CHN_integrate_major_dockyard_mawei_desc_key: "福州船政局，又称马尾造船厂，建于晚清时期，由李鸿章、左宗棠创办，距闽江入海口三十余公里。凭借福建引以为傲的海军传统和海军院校，船政局建设了一座西式设计的造船厂、一座金属锻造厂，以及配套的航海和海军工程院校。后来，船政局因战火而受损，但在使馆城市治下得到了重建，依然名声在外。福州已经回归，我们必须充分发挥船政局的力量，建设现代化海军。"
  CHN_integrate_major_dockyard_whampoa_key: "整合黄埔船坞公司"
  CHN_integrate_major_dockyard_whampoa_desc_key: "香港黄埔船坞公司成立于1866年，创始人为德忌利士·林柏（道格拉斯·拉普雷克）和汤马士·修打兰（托马斯·萨瑟兰），通常简称为“黄埔船坞”或“九龙船坞”。上世纪七十年代，该公司垄断了珠江三角洲的造船业。粤港地区历来是外贸中心，南中国海的地理位置优势既是一笔财富，也是众人觊觎的目标，我们应当整合这些造船设施为海军所用。"
+ CHN_integrate_major_dockyard_dagu_key: "整合大沽船坞"
+ CHN_integrate_major_dockyard_dagu_desc_key: "大沽船坞由李鸿章于1880年在大沽创建，最初仅负责北洋水师舰船维修。两年后开始建造军舰，至1891年已能生产舰炮等火器。1900年被列强占据，两年后归还中国。民国时期该船坞仍具重要地位，归属海军部管辖期间曾生产马克沁重机枪与捷克式轻机枪。"
  CHN_integrate_major_dockyard_fallback_key: "整合[FROM.GetName]的大型造船厂"
  CHN_integrate_major_dockyard_fallback_desc_key: "[FROM.GetName]已经成为一个相当大的造船中心，拥有强大的干船坞、造船厂和海军训练设施。如今我们成为了这里的新主人，必须充分利用这里的技术为国家服务。"
- PRC_cheng_li_zhong_gong_ye_bu: "成立重工业部"
+ PRC_cheng_li_zhong_gong_ye_bu: "成立重工业计划委员会"
  PRC_cheng_li_zhong_gong_ye_bu_desc: "我们的国防将获得巩固，不允许任何帝国主义者再来侵略我们的国土。我们将不但有一个强大的陆军，而且有一个强大的空军和一个强大的海军。尽快建设国防工业，生产出武器装备精良的人民解放军，是摆在新中国面前一项十分紧迫而又艰巨的任务。要用强有力的手段进行集中计划、动员、调集和配置经济资源，集中极为有限的人力、物力、财力优先发展军事工业。"
  PRC_HNN_faw_motors_organisation: "成立一汽集团"
- PRC_HNN_faw_motors_organisation_desc: "一汽集团由重工业部下辖的汽车工业筹备组组织建立。"
+ PRC_HNN_faw_motors_organisation_desc: "一汽集团由重工业计划委员会下辖的汽车工业筹备组组织建立。"
  PRC_HNN_tiema_motors_organisation: "成立第二机械工业部"
- PRC_HNN_tiema_motors_organisation_desc: "第二机械工业部是重工业部下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。"
+ PRC_HNN_tiema_motors_organisation_desc: "第二机械工业部是重工业计划委员会下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。"
+ PRC_HNN_casc_organisation: "在成都建立飞机制造厂"
+ PRC_HNN_casc_organisation_desc: ""
+ PRC_HNN_casc_sheng_fei_organization: "在沈阳建立飞机制造厂"
+ PRC_HNN_casc_sheng_fei_organization_desc: ""
+ PRC_HNN_csic_wu_han_organization: "在武昌建立轮船制造厂"
 
  SHC_Star_Ferry_organisation_unlock: "已整合天星小轮"
  SQI_seventy_two_cannon_artillery_foundry_unlock: "已整合七二炮铸造厂"
@@ -237,10 +246,10 @@
  tooltip_enable_hidden_tech: "启用$TECH|Y$\n$EFFECT$"
 
  autonomous_free_puppet:0 "自由地区"
- associated_governorate: "合作省"
- autonomous_governorate: "自治省"
- governorate: "系属省"
- integrated_governorate: "整合省"
+ associated_governorate: "合作地方政府"
+ autonomous_governorate: "自治地方政府"
+ governorate: "系属地方政府"
+ integrated_governorate: "整合地方政府"
  COUNTRY_associated_governorate: "$NONIDEOLOGY$"
  COUNTRY_associated_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_autonomous_governorate: "$NONIDEOLOGY$"
