--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -503,8 +503,6 @@
  HNN_subsidizedmilitaryindustry:0 "补贴军用工业"
  HNN_Developing_Countryside:0 "发展农村"
 
- HNN_economic_integration_leader:0 "经济整合与援助"
- HNN_economic_integration_hunan:0 "经济整合与援助"
  HNN_bout_to_be_annexed:0 "加入联省派"
  HNN_bout_to_be_annexed_desc:0 "面对战争，赵恒惕不顾一切地想要保住湖南，他同意在战争结束后完全并入广州的联省政府。虽然按照联省自治的原则，目前的湖南仍保持独立。但朝向最终实现全面一体化的第一步已经迈出。"
  HNN_autonomy_in_china:0 "湖南自治"
@@ -512,26 +510,37 @@
 
  CN_zhong_ke_yuan:0 "中国科学院"
  HNN_yi_zhong_compny:0 "一重集团"
- HNN_yi_zhong:0 "工业企业"
+ HNN_yi_zhong_compny_desc: "中国一重集团有限公司是一家中国的大型设备制造商。中国一重由政府直接管理，主要负责本国落后的军事工业、钢铁机械和采矿机械。"
+ HNN_national_railway_corporation: "国铁公司"
+ HNN_national_railway_corporation_desc: "国家铁路公司由政府铁道部和交通部联合运营，他们高效地将从前的外资铁路国有化，并且负责在全国各地建设新的交通网络。"
  shuikoushan_mining:0 "水口山矿务局"
  hengyang_arsernal:0 "衡阳兵工厂"
  zhuzhou_artillery:0 "株洲炮兵技术研究处"
  HNN_tie:0 "第二机械工业部"
- HNN_tie_mio_desc:0 "坦克设计商\n§L第二机械工业部是重工业部下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。§!"
+ HNN_tie_mio_desc:0 "坦克设计商\n§L第二机械工业部是重工业计划委员会下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。§!"
  HNN_faw_motors:0 "中国第一汽车集团"
- HNN_faw_motors_organisation_mio_desc:0 "机动机械化设计商\n§L第一汽车集团是中国第一家汽车厂，由重工业部计划成立，被誉为“中国汽车工业的摇篮”。§!"
- HNN_zhong_gong_ye:0 "中国国家重工业部"
- HNN_zhong_gong_ye_desc:0 "军工综合管理部门\n§L重工业部为正部级单位，分管全国军工事务。§!"
+ HNN_faw_motors_organisation_mio_desc:0 "机动机械化设计商\n§L第一汽车集团是中国第一家汽车厂，由重工业计划委员会计划成立，被誉为“中国汽车工业的摇篮”。§!"
+ HNN_zhong_gong_ye:0 "中国国家重工业计划委员会"
+ HNN_zhong_gong_ye_desc:0 "军工综合管理部门\n§L重工业计划委员会为正部级单位，分管全国军工事务。§!"
  HNN_krupp:0 "克努伯股份公司"
  hengyang_arsenal:0 "衡阳兵工厂"
+ HNN_casc:0 "国营132厂"
+ HNN_casc_desc:0 "中型飞机制造商\n§L国营132厂为第二机械工业部第四分局，航空工业局下辖工厂，主要从事科研、生产、试验、试飞工作。§!"
+ HNN_casc_sheng_fei:0 "国营112厂"
+ HNN_casc_sheng_fei_desc:0 "重型飞机设计商\n§L国营112厂为第二机械工业部第四分局，航空工业局下辖工厂，其前身是日本在东北所建设的飞行机制造株式会社。§!"
+ HNN_csic:0 "武昌造船厂"
+
  HNN_mio_policy_expand_weapon_deals:0 "扩大机械化武器交易"
  HNN_mio_policy_improved_external_equipment:0 "改进外部设备"
 
  HNN_faw_research_cic_tt:0 "\n§g提高§H军工机构§!规模，也将提高通过[?CIC_bonus]研究获取的£civ_factory_output §H经济产能盈余§!\n\n在该活动期间，获取的£civ_factory_output §H经济产能盈余§!总值：§W[?total_campaign_CIC]§!§!"
  HNN_faw_trait_cic_tt:0 "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
- HNN_zhong_gong_ye_arsenal_organisation_unlock:0 "已组织重工业部"
+ HNN_zhong_gong_ye_arsenal_organisation_unlock:0 "已组织重工业计划委员会"
  HNN_faw_motors_organisation_unlock:0 "已建立一汽集团"
  HNN_tiema_organisation_unlock:0 "已建立第二机械工业部"
+ HNN_casc_organization_unlock:0 "成都飞机制造厂已经建成"
+ HNN_casc_sheng_fei_organization_unlock:0 "沈阳飞机制造厂已经建成"
+ HNN_csic_wu_chang_organization_unlock:0 "武昌轮船制造厂已经建成"
  hunan_base_tt:0 "该国策将根据合适的政治发展自动完成。"
  HNN_attraction_of_foreign_investment:0 "§Y设法吸引外部的注意，促使其来我省投资。§!"
  HNN_reforming_status_quo:0 "§Y采用激励措施来改革经济现状。§!"
@@ -1247,6 +1256,24 @@
  HNN_SIK_social_liberal:0 "新疆民主共和国"
  HNN_SIK_social_liberal_ADJ:0 "新疆民主共和国"
  HNN_SIK_social_liberal_DEF:0 "新疆民主共和国"
+ HNN_INC:0 "东南亚人民共和国"
+ HNN_INC_ADJ:0 "东盟"
+ HNN_INC_DEF:0 "东盟"
+ HNN_INC_totalist:0 "东南亚生产建设兵团"
+ HNN_INC_totalist_ADJ:0 "东盟"
+ HNN_INC_totalist_DEF:0 "东盟"
+ HNN_INC_syndicalist:0 "东南亚联合公社"
+ HNN_INC_syndicalist_ADJ:0 "东盟"
+ HNN_INC_syndicalist_DEF:0 "东盟"
+ HNN_INC_radical_socialist:0 "东南亚社会主义共和国"
+ HNN_INC_radical_socialist_ADJ:0 "东盟"
+ HNN_INC_radical_socialist_DEF:0 "东盟"
+ HNN_INC_social_democrat:0 "东南亚人民民主共和国"
+ HNN_INC_social_democrat_ADJ:0 "东盟"
+ HNN_INC_social_democrat_DEF:0 "东盟"
+ HNN_INC_social_liberal:0 "东南亚民主共和国"
+ HNN_INC_social_liberal_ADJ:0 "东盟"
+ HNN_INC_social_liberal_DEF:0 "东盟"
 
  POLITICS_DAI_BIAO_DA_HUI_DESC:0 "长沙城的晨雾未散，弹孔斑驳的砖墙上已爬满青藤，裂缝里钻出几簇倔强的野菊。城楼高悬的红旗被江风灌满，猎猎作响如鼓点——那是安源矿工用染血的工装布缝制的旗，金线绣着“工农铁血”，旗角拴着一串铜铃，风一动，叮叮当当敲醒整座湘江。\n\n城北纱厂的汽笛裹着工人合唱《国际歌》，烟囱喷出的灰烟成了云，年轻的代表攥着磨破边的笔记本冲进会场，袖口沾着机油和稻壳。\n\n茶馆里飘着辣椒味的争论，老农解开草绳捆的账本，数字歪扭如蚯蚓：“地主跑了，田契烧了，可稻种还在咱手心！”窗外的货郎担挑着油印传单，混在麻糖担子里，一声“卖新历书嘞——”，暗号落地，街角霎时卷起传递火种的私语。\n\n赤卫队的少年们在岸边列队，枪杆上绑着湘绣杜鹃，口号喊到一半，被货轮鸣笛打断，干脆跳上码头木箱，用湘潭话唱起新编花鼓调：“挖穿南岳山，炼钢造铁轨，明年火车轰隆隆，拉着红旗过长江咧——”\n\n老铁匠蹲在工会门口打刀，锤子砸出的星子溅到半空，他说那是“地上冒出的星星，迟早连成新天河”。"
  HNN_Dong_Bi_Wu: "董必武"
@@ -1613,6 +1640,12 @@
  HNN_improve_army_desc:0 "湖南省的旧军队就是一帮兵痞，而工团的新军人数又太少，湖南省的军队急需一场改革。" 
  HNN_purge_militia_remains:0 "接受新理论"
  HNN_purge_militia_remains_desc:0 "既然军队的秩序已经被改造了，那我们就得充分利用后勤，传达与军令系统，这些琐事能帮我们赢得最终胜利。"
+ HNN_roads_of_courage:0 "勇气之路"
+ HNN_roads_of_courage_desc:0 "我们必须在军队中建立起一种新的文化，士兵们必须明白，他们的命运掌握在自己的手中。我们不能再依赖于那些高高在上的指挥官来做出决策。每一个士兵都应该有权利和责任去为自己的行动负责。"
+ HNN_rapid_response_detachments:0 "快速反应部队"
+ HNN_rapid_response_detachments_desc:0 "众人一心，革命战争意味着牺牲不可避免，但这绝不代表战友们的生命会被随意放弃，尤其在我国面对着拥有人口优势的敌人时。迅速的治疗、经验丰富的医生与敬业的护士、高效地部署增援：我们尽己所能最大限度减少伤亡，不能让区区一道伤口阻碍士兵投身革命。"
+ HNN_corps_du_genie_militaire:0 "扩大工兵团"
+ HNN_corps_du_genie_militaire_desc:0 "我们需要一支强大的工兵团来支持我们的军队。工兵团将负责修建和维护我们的交通网络，确保我们的部队能够快速移动。工兵团还将负责修建和维护我们的防御工事，以保护我们的部队免受敌人的攻击。"
 
  HNN_officer_corps_experience:0 "赤卫队经验"
  HNN_officer_corps_experience_desc:0 "我们的军队应该是去中心化，但他们现在仍依靠低效的指挥链来制定战术决策。我们必须向士官，甚至是最卑微的民兵们灌输让他们按照自己的意愿领导部队的精神。任何人都不应该等待别人给他下达命令。" 
@@ -1686,7 +1719,7 @@
  HNN_old_wan_desc:0 "尽管我们的海军是从头开始，但是北洋政府并非没有相应计划，他们培养出了一大批优秀的海军军官，也许我们可以让他们重操旧业。"
  HNN_zhe_new:0 "新海军计划"
  HNN_zhe_new_desc:0 "既然是重头开始，那么我们就需要完全重新开始，不能使用北洋军的那些老古董们，也不能受资本主义国家海军传统的影响。有大批的青年才俊希望投身到海军事业中，我们必须让那些旧时代的军官早日退休，让新人们能够在海军中大展拳脚。"
- HNN_zao_chuan_chang:0 "大型船厂计划"
+ HNN_zao_chuan_chang:0 "现代化造船厂"
  HNN_zao_chuan_chang_desc:0 "在革命斗争中，大多数现有船厂都遭受了设施和人员两方面的不同程度损失。我们海军重整计划的第二步即主要着眼于修复旧设施并改良现有设施；从世界上购买新型图纸，建设大型造船厂。"
  HNN_revolution_on_high_seas:0 "翻新江南造船厂"
  HNN_revolution_on_high_seas_desc:0 "作为洋务运动的重要成果，江南造船厂是中国首屈一指的造船中心，但是在北洋政府时期，它的技术水平已经落后于世界先进水平。我们需要对它进行翻新，建设成一个现代化的造船厂。"
@@ -1696,8 +1729,8 @@
  HNN_expand_personnel_reserves_desc:0 "虽然常被忽视，但海军和陆军一样，都需要大批的人力。扩充预备海员的规模将让我们能够迅速弥补损失。"
  HNN_naval_engineers:0 "海军工程师"
  HNN_naval_engineers_desc:0 "我们需要加强水兵们的工程培训，让他们能够在海上进行必要的维修工作。我们需要让他们学会如何在海上进行一些简单的维修工作，毕竟我们的海军还处于初期阶段，很多时候我们都需要依靠水兵们的自我修复能力。"
- HNN_deng_lu_ji_hua:0 "海军陆战队"
- HNN_deng_lu_ji_hua_desc:0 "我们也不能忽视海军陆战队。现在我国拥有漫长的海岸线，我们需要确保军队中有专门从事在河流、湖泊和海洋等地形作战的士兵，这样才能为可能遇到的任何作战情况做好准备。巴特勒声称，即使现在还看不出来，但这些海军陆战队之后将会变得很重要。就像我们的士兵在陆地上作战一样，红海军陆战队也会在滩涂上奋战。"
+ HNN_deng_lu_ji_hua:0 "红海军计划"
+ HNN_deng_lu_ji_hua_desc:0 "红海军如今可能还算不上令人畏惧，但只要有足够资金投入，我们的海军就能震慑全球。所以，让我们投资大建，为了某一天主宰海洋。我们永远不会被遥远大洋彼岸的国家入侵，甚至也许有一天，会由我们这边发起入侵。"
  HNN_liberty_ships:0 "商业护航"
  HNN_liberty_ships_desc:0 "除了军用计划，民用海军也不能落下，我们需要对我们的商船予以保护，让他们在这纷乱的世界中安稳航行。"
  HNN_feng_yu_yu_lai:0 "风雨欲来"
@@ -1968,6 +2001,8 @@
  HNN_social_democrat_party_SIK_long:0 "新疆青年党(Xinjiang Youth Party)"
  HNN_social_liberal_party_SIK:0 "新疆青年党"
  HNN_social_liberal_party_SIK_long:0 "新疆青年党(Xinjiang Youth Party)"
+ HNN_syndicalist_INC:0 "东南亚联合工团党"
+ HNN_syndicalist_INC_long:0 "东南亚联合工团党"
 
  HNN_dan_yi_zhi:0 "单一制国家"
  HNN_lian_bang_zhi:0 "联邦制国家"
@@ -2398,6 +2433,8 @@
  PRC_tech_gourp_name:0 "国际科学技术合作协会"
  PRC_tech_gourp_desc:0 "引进来，走出去，我们要在国际上建立一个科学技术合作协会，促进各国之间的科学技术交流与合作。"
  HNN_build_PRC_tech_gourp:0 "成立国际科学技术合作协会"
+ HNN_dong_nan_ya_lian_he:0 "建立东南亚联合"
+ HNN_dong_nan_ya_lian_he_desc:0 " "
  PRC_tech_gourp_decisions:0 "联盟事务"
  HNN_join_CAISTC_decision:0 "加入中国国际科学技术合作协会"
 
@@ -2611,8 +2648,8 @@
  HNN_wm_zj_de_lu_desc:0 "尽管在我们筚路蓝缕时期，第三国际对我们帮助颇多，但是我们不会忘记他是如何选择了国民党而非我们，并要求我们向国民党妥协的。或许他们并没有背叛革命的道路，但是对我们而言已不再能够接受受制于人的可能性了，我们将要走上一条属于我们自己的道路。"
  HNN_lao_dong_huan_yuan_zu:0 "劳动换援助"
  HNN_lao_dong_huan_yuan_zu_desc:0 "相对于其他社会主义国家而言，我们的经济是相对薄弱的，为了换去更高的援助，我们可以适当的派出一些工人去欧洲劳动。"
- HNN_hong_hai_jun:0 "红海军计划"
- HNN_hong_hai_jun_desc:0 "红海军如今可能还算不上令人畏惧，但只要有足够资金投入，我们的海军就能震慑全球。所以，让我们投资大建，为了某一天主宰海洋。我们永远不会被遥远大洋彼岸的国家入侵，甚至也许有一天，会由我们这边发起入侵。"
+ HNN_hong_hai_jun:0 "海军陆战队"
+ HNN_hong_hai_jun_desc:0 "我们也不能忽视海军陆战队。现在我国拥有漫长的海岸线，我们需要确保军队中有专门从事在河流、湖泊和海洋等地形作战的士兵，这样才能为可能遇到的任何作战情况做好准备。巴特勒声称，即使现在还看不出来，但这些海军陆战队之后将会变得很重要。就像我们的士兵在陆地上作战一样，红海军陆战队也会在滩涂上奋战。"
  HNN_kong_zhong_you_si:0 "空中优势"
  HNN_kong_zhong_you_si_desc:0 "在未来的战争中掌控制空权以及确保战场控制就能够取得一场战争的绝对优势。只要控制了天空，我们就可以对加固据点和城市等倾泻火力。没有人能阻挡来自天空的死神。"
  HNN_san_xian_gong_cheng:0 "三线工程"
@@ -3217,7 +3254,7 @@
  hungong.102.d:0 "不久之前，戴主席宣布了一项新政策，他将成立中国福利彩票发行管理中心，由财政部直接管辖。这个新机构负责管理并在全国范围内发行福利彩票，这些彩票的全部收益都将用于社会福利，而绝非为了谋取某种利益，因此才叫做福利彩票。\n\n这些彩票一经推出，就广受好评，甚至成为了一些家庭的唯一指望，这是他们的人生乐趣，他们的一时荒唐，他们的止痛药，他们的脑力刺激剂。一碰到彩票，即使是目不识丁的人也似乎运算娴熟，记忆惊人。有整整一大帮人就靠介绍押宝方法、预测中奖号码、兜售吉利信物为生。\n\n当然了只有戴春风和他的亲信们才知道，奖金基本上都是虚构的。实际付的只是一些末奖，头、二、三等奖的得主都是不存在的人，又或者是早就安排好的人。"
  hungong.102.a:0 "总之，政府富起来了"
  hungong.103.t:0 "接班人"
- hungong.103.d:0 "在邓小平主席宣布了社会主义教育方针后，重工业部部长陈云同志就此做了一番重要讲话：“江山是我们打下来的，因此继承这个江山也应该是我们的后代。”，对于他们二人的这一番话，其他人或有赞同，又或有不满，但反对者都认为大家伙毕竟都还年轻，年富力强，相信在他们的带领下，中国一定能走出家族世袭的怪相。"
+ hungong.103.d:0 "在邓小平主席宣布了社会主义教育方针后，重工业计划委员会主席陈云同志就此做了一番重要讲话：“江山是我们打下来的，因此继承这个江山也应该是我们的后代。”，对于他们二人的这一番话，其他人或有赞同，又或有不满，但反对者都认为大家伙毕竟都还年轻，年富力强，相信在他们的带领下，中国一定能走出家族世袭的怪相。"
  hungong.103.a:0 "会有那天的"
  hungong.104.t:0 "记者的素养"
  hungong.104.d:0 "陈云主席近日发表了一系列讲话，其中心思想包括作为一个记者，最高的素养自然是听党话，跟党走，写好的报道先由党审查，党审查后才能发表，不给党找麻烦。作为记者一定要有社会道德，要善于去挖掘社会中的真善美，不能一味的盯着假恶丑。记者虽然不是理论家，但是也需要有一定的理论素养，要知道社会主义和党的正确性，要在报道中多表达对党的敬爱，和对党的领导的赞扬；也要明白资本主义从头到脚都是罪恶的，不能对他们的社会有一点儿的褒扬。"
@@ -3229,7 +3266,7 @@
  hungong.106.d:0 "刘少奇主席宣布开启四清运动以来，已有了一些时日。四清运动也搞出来不少功绩。但也有一些人对此心怀不满，东北局书记高岗就在东北局扩大会议上暗讽刘少奇主席是资产阶级分子，说刘少奇表面上是工团主义者，实际上是要搞资产阶级自由主义。\n\n这些话传到刘少奇主席耳里让他很是不快，这个高岗长期和他对着干，东三省简直就像个独立王国，针插不进，水泼不进。就在近日的省部级扩大会议上。刘少奇指出这一点，高岗直骂道“我就是反对你刘少奇，况且，反对你刘少奇的又不止我一个，在座的各位心里明白！”"
  hungong.106.a:0 "乱了，都乱了"
  hungong.107.t:0 "004号目标人物 高岗"
- hungong.107.d:0 "高岗，原名高崇德，字硕卿，中国陕西米脂县武镇人，是西北革命根据地的重要领导人之一，建国后担任东北局第一书记、东北人民政府主席，党政大权一手独握。而高岗长年来与国家主席刘少奇同志不满，他认为刘少奇是花架子，而且长期在白区工作不值得信任。\n\n就在近日的政务会议高刘冲突后不久，重工业部部长陈云在中央会议上第一个站出揭发高岗的反党阴谋，他说，高岗曾在私下里曾拉拢他和邓小平等几位同志，并许诺“搞几个副主席，你一个，我一个”。事实上就在高岗说出这番大逆不道的话的当晚邓小平就向刘少奇揭发了这个事情。第二个发言的是外交部部长周恩来，他也指控高岗阴谋分裂国家，在东北搞独立王国，是张作霖第二。紧接着更多的中央部级领导都开始发言批评高岗，一位曾在东北任职的领导指控到“他在物质生活和道德生活上是腐烂的，还搞了一个北欧女人，也不知道人家的底细，是不是什么国家的间谍。”。而唯独盛传在西北革命根据地与高岗长期不和的习仲勋没有指责高岗，反而是呼吁大家冷静，不要过度拔高。\n\n但是最终大会还是在刘主席的指示下一致决定剥夺高岗的一切职务，称高岗为中国的莫斯利。在得知这一消息后高岗在家中服大量安眠药自杀身亡，只留下一封遗书，书中痛骂陈云是刘少奇的狗奴才。对于这种自杀行为，党进一步做出了对其开除党籍的判决。"
+ hungong.107.d:0 "高岗，原名高崇德，字硕卿，中国陕西米脂县武镇人，是西北革命根据地的重要领导人之一，建国后担任东北局第一书记、东北人民政府主席，党政大权一手独握。而高岗长年来与国家主席刘少奇同志不满，他认为刘少奇是花架子，而且长期在白区工作不值得信任。\n\n就在近日的政务会议高刘冲突后不久，重工业计划委员会主席陈云在中央会议上第一个站出揭发高岗的反党阴谋，他说，高岗曾在私下里曾拉拢他和邓小平等几位同志，并许诺“搞几个副主席，你一个，我一个”。事实上就在高岗说出这番大逆不道的话的当晚邓小平就向刘少奇揭发了这个事情。第二个发言的是外交部部长周恩来，他也指控高岗阴谋分裂国家，在东北搞独立王国，是张作霖第二。紧接着更多的中央部级领导都开始发言批评高岗，一位曾在东北任职的领导指控到“他在物质生活和道德生活上是腐烂的，还搞了一个北欧女人，也不知道人家的底细，是不是什么国家的间谍。”。而唯独盛传在西北革命根据地与高岗长期不和的习仲勋没有指责高岗，反而是呼吁大家冷静，不要过度拔高。\n\n但是最终大会还是在刘主席的指示下一致决定剥夺高岗的一切职务，称高岗为中国的莫斯利。在得知这一消息后高岗在家中服大量安眠药自杀身亡，只留下一封遗书，书中痛骂陈云是刘少奇的狗奴才。对于这种自杀行为，党进一步做出了对其开除党籍的判决。"
  hungong.107.a:0 "高麻子倒台了，东北的天就晴了"
  hungong.108.t:0 "克服土地改革中“左”的情绪"
  hungong.108.d:0 "我感到边区改仍有下列问题值得注意:\n\n土地革命地区的农民，由于“左”的影响，都不愿意当中农。实际上已都不是贫农，而是中农，但要改变成份那是很不容易的。此外，现在深入考察起来，边区的劳动英雄，还是好的多，真正勤苦劳动，热爱边区，因有余粮往往被当成斗争对象。这不只是目前问题，而是今后发展生产问题。这分明是对劳动致富方针有怀疑。如不从坚持贯彻正确政策中打破这一关，对党对人民都是莫大的损失。拟规定凡劳动英雄与干部家庭在处理前必须经过超一级的批准在土地革命地区，的确中农占优势。即减租地区也起了基本上的变化。如不看到这个情况，必犯重大错误。\n\n在老区，有些乡村贫雇农很少。其中，有因偶然灾祸贫穷下来的，有是地、富成份下降但还未转化好的，有因好吃懒做、抽赌浪荡致贫的。故这些地区组织起的贫农团在群众中无威信，由他们起来领导土改，就等于把领导权交给坏人。因而出的乱子就很多，吓得区乡干部有逃跑的，有自杀的。群众中也同样发生此种现象。很多地区掌握不好，这也是其中一个很大原因。因之，老区就要不怕中农当道，真正的、基本的好群众在中农阶层及一部分贫农中。\n\n不应再算老账(特别是政治上的)。过去党的政策对这些坏人，只要他诚心悔过，不究既往。十年以来他们的确改好了，如把旧帐一齐翻起，会引起社会上极大动荡，影响传播出去，更对我国不利，故决定政治上不管重大或轻微的旧帐，都一概不究，只对那些今天还进行反革命活动的，或帮助胡匪作恶的，应发动群众严厉镇压。这才是正确地维护党的政策。否则，会减低党在群众中的威信。\n\n只有死心塌地跟敌人走，做敌人忠实走狗的，才叫做投敌分子，否则均采用感化争取政策。对恶霸，应有明确的定义。真正霸占一方，欺压群众者是恶霸。不能把在乡村说话好强的，或曾砍倒别人一棵树，或做过其他一二坏事的，统按恶霸惩办。也不应该丈夫是恶霸，把妻子也当成恶霸，甚至连小孩也当成小恶霸去斗争。这都会造成许多恶果的。"
