--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -321,3 +321,20 @@
 
  TRIGGER_OWNS_ANY_STATE_OF: "拥有以下任意地区："
  TRIGGER_NOT_OWNS_ANY_STATE_OF: "不拥有以下任意地区："
+
+ VICTORY_POINTS_7577: "铜仁"
+ VICTORY_POINTS_7577_ENDONYM: "[602.Controller.GetVictoryPointName_7577]"
+ VICTORY_POINTS_9963: "阳江"
+ VICTORY_POINTS_9963_ENDONYM: "[593.Controller.GetVictoryPointName_9963]"
+ VICTORY_POINTS_7108: "宝安"
+ VICTORY_POINTS_7108_ENDONYM: "[593.Controller.GetVictoryPointName_7108]"
+ VICTORY_POINTS_7152: "香山"
+ VICTORY_POINTS_7152_ENDONYM: "[593.Controller.GetVictoryPointName_7152]"
+ VICTORY_POINTS_12274: "南充"
+ VICTORY_POINTS_12274_ENDONYM: "[661.Controller.GetVictoryPointName_12274]"
+ VICTORY_POINTS_12767: "绵阳"
+ VICTORY_POINTS_12767_ENDONYM: "[605.Controller.GetVictoryPointName_12767]"
+ VICTORY_POINTS_13143: "湘潭"
+ VICTORY_POINTS_13143_ENDONYM: "[602.Controller.GetVictoryPointName_13143]"
+ VICTORY_POINTS_12310: "娄底"
+ VICTORY_POINTS_12310_ENDONYM: "[602.Controller.GetVictoryPointName_12310]"
