--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1423,6 +1423,7 @@
  HNN_dong_victory:0 "董必武当选主席"
  HNN_he_victory:0 "何叔衡当选主席"
  HNN_gao_gang_Portrait_Picker:0 "高岗的头像"
+ HNN_gao_gang_to_sov:0 "成立苏维埃共产主义共和国联盟"
  HNN_he_long_Portrait_Picker:0 "贺龙的头像"
 
  HNN_totalist_party1:0 "工团党"
@@ -1727,6 +1728,8 @@
  HNN_cruisers_desc:0 "作为海军改革工作的一部分，我们还应该对轻巡洋舰等大型舰船进行现代化改造。中国有着巨大的工业潜力，毫无疑问，随着时间的推移，我们将能够实现雄心勃勃的巡洋舰现代化工作，创建与哪怕是最强大的对手旗鼓相当的中国海军。"
  HNN_expand_personnel_reserves:0 "扩充预备海员"
  HNN_expand_personnel_reserves_desc:0 "虽然常被忽视，但海军和陆军一样，都需要大批的人力。扩充预备海员的规模将让我们能够迅速弥补损失。"
+ HNN_adopt_the_gufo: "着眼雷达技术"
+ HNN_adopt_the_gufo_desc: "虽然雷达技术在航空领域的应用还不太成熟，但为了确保我们国家的美好未来，我们必须投资于这些先进技术，我们绝对无法容忍我们的敌人在这项关键领域上取得技术优势。"
  HNN_naval_engineers:0 "海军工程师"
  HNN_naval_engineers_desc:0 "我们需要加强水兵们的工程培训，让他们能够在海上进行必要的维修工作。我们需要让他们学会如何在海上进行一些简单的维修工作，毕竟我们的海军还处于初期阶段，很多时候我们都需要依靠水兵们的自我修复能力。"
  HNN_deng_lu_ji_hua:0 "红海军计划"
@@ -2426,7 +2429,7 @@
  HNN_chi_jiao_yi_sheng_desc:0 "亦农亦医，农忙时务农，农闲时行医，白天务农，晚上行医"
 
  HNN_let_he_in:0 "邀请其他社会主义盟友加入"
- HNN_let_he_in_desc:0 "我们将邀请其他社会主义伙伴尤其是亚洲的伙伴们加入我们的队伍，去建设国际无产阶级运动。"
+ HNN_let_he_in_desc:0 "我国组建的无产阶级联盟将引导全世界无产阶级人民合力驱逐帝国主义、资本主义势力。我们将邀请其他社会主义伙伴尤其是亚洲的伙伴们加入我们的队伍，去建设国际无产阶级运动。"
  HNN_invite_into_economic_sphere:0 "邀请其他社会主义盟友加入亚太经济互助委员会"
  HNN_INVITING_SOMEONE:0 "正在邀请他人加入我们的阵营"
  HNN_asia_let_them_in_targeted_decision:0 "邀请[From.GetNameWithFlag]加入[ROOT.GetFactionName]"
@@ -3393,7 +3396,7 @@
  hungong.144.d:0 "在新宪法中，封建地主阶级、军阀和帝国主义被明确定位中华人民和民主制度的敌人，并且被赋予了一个在未来将会家喻户晓的名字“三座大山”。宪法认为，长期以来，三者互相媾和，将中华人民禁锢在半殖民地半封建主义社会的噩梦中。工团党政府新的民主宪法注明工团党和他们所服务的工农阶级将会领导其同民族资产阶级和城市小资产阶级组成的统一战线推翻这三座大山，让中国摆脱半殖民地半封建主义从而渐进地走向工团主义。土地革命和农会运动在新宪法下有着全所未有的合法性，而民族资产阶级产业也会在工人民主权利受到优先保护的基础上大力发展。\n\n为实现这一宪法目标，新成立的人民代表大会作为新政权的民主机构创新性地使用了英法工团主义政权的“人民代表制”，只不过将其从工农阶级民主暂时扩大到了资产阶级民主派和小资产阶级民主派也可以参与。\n\n 宪法还确立了新政府的组织形式，新政府的各个部门负责人将会学习苏俄的人民委员会，在工团党的领导下采取委员会制度同时保留公务员体制从而满足目前的社会治理需要。"
  hungong.144.a:0 "真正的民主"
  hungong.145.t:0 "寒冬已去"
- hungong.145.d:0 "胡贺春是一个非常谨慎的人，这就使得在商会其他兄弟们都在组织人马阻止赤匪入城的时候，胡贺春却在一门心思策划跑路。不过就和其他兄弟一样，他的计划也失败了，赤匪把长沙围的水泄不通，他根本钻不出去。不过好处是，那些积极反赤匪的兄弟要不进大牢要不被赤匪枪毙了，不过胡贺春除了家被一些工人洗劫了之外没啥损失。不过很快，胡贺春被劫走的钱就陆续回来了，工团党找上了他，告诉贺春他是有一定进步性的民族资产阶级，而现在新宪法施行渐进的革命，现阶段会联合民族资产阶级一起打倒封建地主、帝国主义和军阀这三座大山。胡贺春听明白了，那就是赤党还需要他胡贺春在南边的门道做生意，而柳大春作为生意人也愿意，于是日子慢慢又好起来了，美中不足的是，现在他现在只能有一个老婆了，厂子里面的工人每天工作只能干八个时辰，而且还老是要和工会打交道。不过贺春毕竟是打交道的好手，他现在正在新政府还有工会里面交朋友，或许老日子很快就回来了。"
+ hungong.145.d:0 "胡贺春是一个非常谨慎的人，这就使得在商会其他兄弟们都在组织人马阻止赤匪入城的时候，胡贺春却在一门心思策划跑路。不过就和其他兄弟一样，他的计划也失败了，赤匪把长沙围的水泄不通，他根本钻不出去。不过好处是，那些积极反赤匪的兄弟要不进大牢要不被赤匪枪毙了，不过胡贺春除了家被一些工人洗劫了之外没啥损失。不过很快，胡贺春被劫走的钱就陆续回来了，工团党找上了他，告诉贺春他是有一定进步性的民族资产阶级，而现在新宪法施行渐进的革命，现阶段会联合民族资产阶级一起打倒封建地主、帝国主义和军阀这三座大山。胡贺春听明白了，那就是赤党还需要他胡贺春在南边的门道做生意，而柳大春作为生意人也愿意，于是日子慢慢又好起来了，美中不足的是，现在他现在只能有一个老婆了，厂子里面的工人每天工作只能干八个小时，而且还老是要和工会打交道。不过贺春毕竟是打交道的好手，他现在正在新政府还有工会里面交朋友，或许老日子很快就回来了。"
  hungong.145.a:0 "努力总会有收获"
  hungong.146.t:0 "布尔什维主义的延续"
  hungong.146.d:0 "得益于湖南工团党人在实践中确立的将布尔什维主义组织形式和工团主义目标相结合，布尔什维主义在湖南临时革命公社这个工团主义政权中的流传度不亚于工团主义。许多工团党的同志如彭德怀、董必武和毛泽东在演讲和工作中都会使用布尔什维主义和列宁主义的词汇，同时列宁等布尔什维克领袖在湖南革命临时公社列宁的名声也是特别好，其著作也在党内广泛流传和强调。虽然大部分工团党员仍然自称自己只是使用布尔什维克组织形式的工团主义者，仍有一些人公开宣称自己是布尔什维主义或者列宁主义者。不过由于其中分裂为了反极权主义化的布尔什维主义者和认同极权宪章的布尔什维主义者，且两边内部都有着巨大分歧，于是最终没有形成一个统一的成熟派系。\n\n随着彭德怀主席在大会中取代了胜利，宣布执行革命军管以更好地斗争反动势力和更高效地进行革命建设后。这些布尔什维主义者中的激进派或者支持军队派的人也自然而然地得到了升迁。毫无疑问，他们也会推动彭德怀为首的工团党中央实行更为激进的各类政策。"
@@ -5283,7 +5286,7 @@
  hnnshenbing.4.d:0 "并非所有的神兵都是叛贼，高罗最初的一伙神兵是1920年开始兴起的，后来还和黑洞的王锡九一伙有火并，被剿灭后，当地一个名叫李飞瞎子的自称是某某神仙下凡，在庙里给人画符水，收编了这支神兵，又得到了当地豪绅、地主的支持，由李飞瞎子和他的弟子杨雪海组织了起了新神兵，又号义勇队，大队长杨学海，辖高罗、朝阳、李溪、新安等四个乡。于当年五月至年底，扎营于挨山村老察上的徐、廖二宅，常驻在此的有一百多人。神兵给养由各士豪筹集，即各士豪的田地在哪个保，就由这个保的保长找该士豪筹捐。如黎台成、黎清成、杨鹏程等土豪在六保有田士，就由六保保长找他们筹捐。改称“义勇队”以后，还得到了县政府拨予的给养。"
  hnnshenbing.4.a:0 "这是个好办法"
  hnnshenbing.5.t:0 "审判"
- hnnshenbing.5.d:0 "乾善坤看着自己宝贝的大花马被人牵走，恶狠狠地盯着收走自己双刃宝剑的那个小鬼，将平生最恶劣的脏词都宣泄在了押送他的红军士兵上，在这群小鬼还在娘胎里头他乾善坤就在是行走天下的好汉了。菩萨保佑，他的傲气不允许他对这群小兔崽子低头。\n\n不过即使他骂得再别出心裁，也没有人回应他，于是乾善坤即便脾气再暴躁骂了一个时辰后也骂累了，只得乖乖跟着红军走。\n\n突然，只见前方一排人站着，同自己一样戴着镣铐脚铐，乾善坤大吃一惊，只见四面八方有名有姓的神兵头子、袍哥好汉都来了，第一个就是那宣恩高罗的李飞瞎子和他的徒弟杨云海，他带着手下给那土豪做打手，赚的盆满钵满。旁边是“苗王”龙云飞，也是道上赫赫有名的好汉，当然了那肯定比不起贺胡子。一转头，只见远处走来十几个年轻士兵，每人手上拿一把枪。\n\n还没等他反应过来，乾善坤就被押到和其他人一排，接着和其他人一样被按着跪了下来。\n\n一排黑洞洞的枪口对着他们。\n\n乾善坤意识到怎么回事了，他大吼着："
+ hnnshenbing.5.d:0 "乾善坤看着自己宝贝的大花马被人牵走，恶狠狠地盯着收走自己双刃宝剑的那个小鬼，将平生最恶劣的脏词都宣泄在了押送他的红军士兵上，在这群小鬼还在娘胎里头他乾善坤就在是行走天下的好汉了。菩萨保佑，他的傲气不允许他对这群小兔崽子低头。\n\n不过即使他骂得再别出心裁，也没有人回应他，于是乾善坤即便脾气再暴躁骂了一个小时后也骂累了，只得乖乖跟着红军走。\n\n突然，只见前方一排人站着，同自己一样戴着镣铐脚铐，乾善坤大吃一惊，只见四面八方有名有姓的神兵头子、袍哥好汉都来了，第一个就是那宣恩高罗的李飞瞎子和他的徒弟杨云海，他带着手下给那土豪做打手，赚的盆满钵满。旁边是“苗王”龙云飞，也是道上赫赫有名的好汉，当然了那肯定比不起贺胡子。一转头，只见远处走来十几个年轻士兵，每人手上拿一把枪。\n\n还没等他反应过来，乾善坤就被押到和其他人一排，接着和其他人一样被按着跪了下来。\n\n一排黑洞洞的枪口对着他们。\n\n乾善坤意识到怎么回事了，他大吼着："
  hnnshenbing.5.a:0 "“贺云卿，我是你结拜兄弟啊！”"
  hnnshenbing.6.t:0 "一心一意"
  hnnshenbing.6.d:0 "贺龙将军是穷人的救星，这在湘鄂西的乡亲们心里，早就是铁打的事实。\n\n施白心原是个穷苦汉，祖祖辈辈刨地讨饭，日子过得比黄泥巴还苦。地主老财压榨，兵匪乱抢，连口热乎饭都是奢望。他恨透了这世道，可穷人能咋办？光恨不顶饱，光骂不管用。\n\n后来，贺龙带着神军来了，杀土豪，分田地，还把穷人当亲人看待。施白心头一回吃上红军的饭，烫嘴的红薯、喷香的苞谷粥，让他眼泪汪汪。他心里像锻铁一样，烧得通红，打得坚硬：这日子跟着贺龙才有盼头！\n\n地主恶霸说：“贺龙就是红匪，迟早让官军剿灭！”施白心冷笑：“要剿也该先剿你们这些吸血虫！”亲戚劝：“造反哪有好下场？”施白心一挥拳头：“不反，咱一辈子就这样跪着活！”\n\n他扔下破锄头，提起大刀，跟着贺龙上了战场。从泥腿子到红军战士，他在枪林弹雨里拼杀，把命都押在了这条翻身路上。贺龙说：“为穷人打天下，不怕苦，不怕死！”施白心点头：“我铁了心，死也不回头！”"
