--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 -为湖南红线增加了几个军事国策
+-为部分决议增加了新的GUI
 -翻新了赛里斯区的军工企业
+-添加了一些新的胜利点
+-现在高岗将能够建立苏维埃联盟
 -将天主教线内涉及到的圣经段落翻译修订为更加符合天主教的版本
 -修复了一些文案上的错误
 -更新了一些湖南红线的ideas图标
