--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -152,6 +152,7 @@
  HNN_wu_fa_xian_eco:0 "吴法宪"
  HNN_li_zuo_peng_eco:0 "李作鹏"
  HNN_huang_yong_shen_eco:0 "黄永胜"
+ HNN_xu_guang_da_eco:0 "许光达"
  HNN_Chen_Yun_eco:0 "陈云"
  HNN_Chen_Yun_eco_2:0 "陈云"
  HNN_shi_yin_shun_eco:0 "印顺法师"
@@ -1339,6 +1340,8 @@
  HNN_Hua_Guofeng: "华国锋"
  POLITICS_HNN_Hua_Guofeng_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1921年2月16日，中华民国 山西省 交城县§!\n§Y军旅生涯：§!§g华国锋"
  HNN_Xu_Si_You: "许世友"
+ HNN_Xu_Si_You_eco:0 "许世友"
+ HNN_Xu_Si_You_eco_desc:0 "§Y生于：§!§L1905年2月28日，大清帝国 河南省 新县§!\n§Y背景：§!§L许世友生于新县田铺乡贫农家庭，八岁入少林寺习武，练就一身硬功夫。1921年因路见不平打死地主家丁，被迫流落江湖。1926年加入吴佩孚部队当兵，受北伐军影响秘密接触工团思想。\n\n1927年黄麻起义期间，率少林俗家弟子组成「佛兵连」，用齐眉棍突破城门，正式加入中国工团党。起义失败后，带残部转战大别山区，次年春突破封锁进入湖南平江，与王震游击队会合。\n\n在湘鄂赣根据地期间，将少林拳法与游击战术结合，独创「夜战八式」：破戒斩首、罗汉撞钟、金刚伏魔等招式威震敌胆。在长沙战役中，率「铁头队」用硬气功撞开城门，为彭德怀主力打开通道。因其作战时必先念《往生咒》，被赵恒惕军称为「超度将军」。§!"
  POLITICS_HNN_XU_SI_YOU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1905年2月28日，大清帝国 河南省 新县§!\n§Y军旅生涯：§!§g许世友生于新县田铺乡贫农家庭，八岁入少林寺习武，练就一身硬功夫。1921年因路见不平打死地主家丁，被迫流落江湖。1926年加入吴佩孚部队当兵，受北伐军影响秘密接触工团思想。\n\n1927年黄麻起义期间，率少林俗家弟子组成「佛兵连」，用齐眉棍突破城门，正式加入中国工团党。起义失败后，带残部转战大别山区，次年春突破封锁进入湖南平江，与王震游击队会合。\n\n在湘鄂赣根据地期间，将少林拳法与游击战术结合，独创「夜战八式」：破戒斩首、罗汉撞钟、金刚伏魔等招式威震敌胆。在长沙战役中，率「铁头队」用硬气功撞开城门，为彭德怀主力打开通道。因其作战时必先念《往生咒》，被赵恒惕军称为「超度将军」。" 
  HNN_geng_biao: "耿飚" 
  HNN_Geng_Biao_for:0 "耿飚"
@@ -2284,7 +2287,7 @@
  HNN_huang_yong_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y除掉黄永胜§!"
 
  HNN_big_clean_category:0 "清理反对派"
- HNN_big_clean_category_desc:0 "我们的政府是依靠一次不光彩的政变才上台成功的，除了军队以外，无论党内外都不承认我们的合法性，社会上示威抗议活动层出不穷，政府内基本停摆。而这一切实际上都是由§R叶剑英§!、§R林彪§!、§R贺龙§!他们组织起来的，这些军队首领他们名义上支持我们的政府，但背地里早就想把我们踹下去了，但是我们也不是那么容易对付的！\n\n§g你需要清洗掉一大批政府内与军队内的反对派来提升你的支持度，但是也要注意不要过火，一旦你清洗的人过多，军队将会再次发动政变§!。\n\n§C目前的死亡人数§!：[?HNN_ren_tou]"
+ HNN_big_clean_category_desc:0 "我们的政府是依靠一次不光彩的政变才将权力握在手中的，这也意味着除了军队以外，没有人承认我们的合法性，党内批判声音不断，社会上示威抗议活动也是层出不穷，政府基本停摆。但是这一切都不是偶然，这一切实际上都是由§R叶剑英§!、§R林彪§!、§R贺龙§!这三个人和他们的亲信们组织起来的，这些军队首领们名义上支持我们，与我们一同发起了政变，但背地里他们实际上想连我们一切铲除，然而我们也不是那么容易对付的！\n\n§g你需要清洗掉一大批政府内与军队内的反对派来提升你的支持度，但是也要注意不要过火，一旦你清洗的人过多，军队将会再次发动政变§!。\n\n§C目前的死亡人数§!：[?HNN_ren_tou]"
  HNN_kill_xi_zhong_xun:0 "除掉习仲勋"
  HNN_kill_xi_zhong_xun_desc:0 "西北革命根据地的二号人物，反对派头目，是时候让这个家伙消失了"
  HNN_kill_zhu_de:0 "除掉朱德"
@@ -3492,13 +3495,13 @@
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
- hunqingxi.1.d:0 "许世友，字汉禹，法号永祥，湖北麻城人，国民革命战争期间其英勇作战，在军中素有能文能武的美名，建国后获上将军衔，如今担任南京军区司令员。而在昨日傍晚，其乘车通过南京市复兴桥时，桥面在一声巨响后突然垮塌，许世友将军座驾及随行车辆坠入河中，南京市政府组织打捞人员经过一夜打捞，虽然成功打捞起许将军乘坐车辆，但是车内并未发现存活的许将军本人抑或是其尸体。据相关专家猜测有极大可能是许将军遗体被冲入长江之内，遗体或可在下游沿岸被发现。党主席[HNN.GetLeader]表示对此密切关注，希望早日得知有关许将军下落的消息。"
- hunqingxi.1.a:0 "好好的桥怎么就垮了呢？"
+ hunqingxi.1.d:0 "许世友，字汉禹，法号永祥，湖北麻城人，曾在烽火硝烟的国民革命战争中，展现了非凡的英勇与智慧。他不仅在战场上立下赫赫战功，还因其能文能武，才俊非凡，在军中声名显赫，久为将士称道。建国后，他凭借卓越的军事才能和忠诚的报国之心，荣升为上将军衔，担任南京军区司令员，成为新中国的栋梁之一。然而，命运如同一条曲折的河流，总在最意想不到的时刻，带来不可预测的波澜。\n\n昨日傍晚，夕阳的余晖斜照在南京城的街头，空气中弥漫着些许湿气，仿佛一场突如其来的风暴正在悄然逼近。许将军正乘车经过南京市复兴桥，这座承载着历史与人们日常往来的桥梁，原本是如此平静安稳，然而，一声巨响划破了黄昏的宁静。复兴桥突如其来地坍塌，仿佛岁月的积淀瞬间化为尘土，桥面裂开的瞬间，许将军的座驾和随行车辆不禁陷入了无情的深渊。\n\n震耳欲聋的巨响回荡在江面上，桥体倒塌的瞬间，仿佛天地间的秩序被打破，所有人都陷入了愕然与恐慌之中。紧急救援行动随即展开，南京市政府立即调集打捞队伍，夜色中，打捞人员冒着危险，奋力寻觅着那消失在浩瀚江水中的希望。然而，尽管经过一夜的努力，终于找回了许将军所乘车辆的残骸，却始终未能找到那位曾经威风凛凛、令人敬畏的上将军的身影。车内并未发现他的遗体，甚至连一丝生还的迹象都没有。所有人的心中都升起了无法言说的沉痛与疑惑。\n\n相关专家表示，极有可能在那声巨响过后，许将军的遗体被卷入了浩瀚的长江之中，随着水流向下游漂去，或许在某一时刻，某一片江岸会将他带回人们的视线。\n\n党主席[HNN.GetLeader]同志为许世友将军做出高度评价：“此刻的心情，已无法仅仅用悲伤来形容。许世友将军，那个曾用铁血铸就辉煌的英雄，仿佛在这一场突如其来的灾难中，消失在了人们的视野之外。他的一生，曾为祖国立下赫赫战功，忠诚与勇敢并肩，才智与谋略齐飞。如今，唯有长江的滚滚波涛和南京的夜空，见证了这位伟大将军的最终归宿。而无论许将军的遗体是否能在江水中被寻获，他的英名与英勇的事迹，必将如长江之水，永远流传。”"
+ hunqingxi.1.a:0 "你说，这好好的桥怎么就垮了呢？"
  hunqingxi.2.t:0 "075号目标人物 吴法宪"
- hunqingxi.2.d:0 "吴法宪中校是江西永丰人，他是林彪元帅的亲信，曾经在政治处工作，并在林彪手下任职，现在参与中国空军的建设，就在今天吴法宪中校和飞行员乘着新中国第一架喷气式战斗机飞机歼5在空中飞行的时候发生了意外，飞机操纵系统失灵，歼5战斗机径直撞向一座大山上，飞行员和吴法宪中校当场死亡，目前警方和军队已经对现场进行封锁，不准任何人靠近，并对残骸进行和处理。"
- hunqingxi.2.a:0 "摔得可真惨"
+ hunqingxi.2.d:0 "吴法宪，中校，江西永丰人，早年便显露出非凡的才华与忠诚，成为林彪元帅的得力干将。他曾在政治处任职，在林彪的麾下效力，深得其信任。随着新中国的成立，他积极投身于中国空军的建设与发展，亲历了国家航空事业的崛起与壮大。吴法宪的名字，早已与国家的飞行事业紧密相连，成为新时代军人的象征。然而，命运有时总是如此捉弄人，英雄也会在最意想不到的时刻，遭遇巨大的转折。\n\n就在今天，阳光明媚的午后，吴法宪中校与一名飞行员携手登上了新中国第一架自研战斗机——歼5。他们飞向蔚蓝的天空，航迹如同一条长长的白线，划破了沉寂的天际，象征着中国空军日新月异的力量。然而，空中飞行的宁静并未持续太久。就在飞行进行到一半时，歼5战斗机突然发生了无法预料的故障——飞机的操纵系统失灵，令飞行员和吴法宪中校陷入了无可避免的绝境。\n\n失控的歼5战斗机迅速偏离航道，以惊人的速度直扑前方的一座大山。山间的风声仿佛在瞬间凝固，飞机的轰鸣声打破了长空的寂静。飞机与山峰的碰撞在一声巨响中发生，爆炸的火光映照在山谷间，彷佛时间凝固。飞行员和吴法宪中校当场丧生，化作这片荒野的永恒一部分。空中的壮丽飞行，瞬间转为一场无法挽回的悲剧。当局接到消息后，警方与军队立即赶到现场，对事故发生地进行了封锁，严令任何人不得接近。战斗机的残骸散落在山坡上，焰火尚未熄灭，周围弥漫着浓重的硝烟气息。军方与相关部门对事故现场进行处理，展开调查，试图寻找事故背后的原因，但无论答案如何，今天，英雄已然陨落，历史又增添了一段不朽的哀歌。\n\n吴法宪中校的英勇与忠诚，正如他为国家所奉献的每一滴汗水与每一次飞翔，都将永远镌刻在空军的历史篇章中，成为新中国航天事业发展的重要见证。"
+ hunqingxi.2.a:0 "摔得可真惨，哦，不是，我很悲伤，不好意思"
  hunqingxi.3.t:0 "025号目标人物 彭真"
- hunqingxi.3.d:0 "彭真原名傅懋恭，山西省曲沃县侯马镇垤上村人，现在担任中央政治局委员，据传此人存在贪污受贿和辱骂工人学生等行为，就在今天早晨彭真和自己的手下乘车出去办公，车行驶在一处树林的时候，彭真的前面突然出现一辆汽车，将其逼停，从车上下来几个人，彭真的手下从车上下来，问来者何人，话还没说完就被一枪爆头。紧接着从彭真的两边杀出几名蒙面人，他们手里拿着手枪不断对彭真的汽车开火，彭真和司机当场身亡。这件事情被一名农民目睹，他在这些人走后叫来了警方，警方对现场进行封锁和勘察。彭真的死亡，刺激到了在北京的高官们，他们纷纷要求当局对彭真的死立案调查，要找出凶手并严惩。"
+ hunqingxi.3.d:0 "彭真，原名傅懋恭，山西省曲沃县侯马镇垤上村人，曾在中国政坛占据重要地位，如今是中央政治局委员之一。然而，关于他的传闻并不止于他在政治上的地位和成就，坊间一直流传着他与贪污受贿、甚至是辱骂工人学生等丑闻相伴的声音，这些暗流也在他的政治生涯中始终未曾消散。随着时间的推移，公众对他的一些行为愈发感到疑惑与不满。今天，这一切似乎迎来了一个戏剧性的转折。\n\n清晨，彭真和他的几名手下正乘车外出办事，车窗外的树林幽深而宁静，远处的阳光透过枝叶洒下斑驳的光影。车行至一段偏僻的道路时，突如其来的一辆汽车从前方疾驶而来，将彭真的车强行逼停。局势在瞬间变得紧张起来。几个人从那辆车里迅速下车，步伐急促，气氛瞬间变得压抑而危险。\n\n彭真的手下赶紧下车，试图阻止这突如其来的威胁。他们冲上前去，急问来者何人，话音未落，一声枪响撕裂了清晨的寂静——一名手下应声倒地，血洒在了车道上。还未等大家反应过来，从彭真的两侧，几名蒙面人突然跃出，他们手持手枪，毫不犹豫地朝彭真的车窗开火。枪声回荡在树林间，弹壳在地面上飞溅。随着一连串的枪响，彭真和司机当场倒下，鲜血染红了座位。\n\n这一幕被远处的一名农民亲眼目睹。看到一切发生后，这位农民迅速赶到附近，拨打了报警电话。警方赶到现场时，已经是血腥的沉寂。警方立即封锁了现场，展开了勘察工作，试图从零星的线索中拼凑出这一事件的真相。\n\n彭真的死讯很快在政界引起了震动，尤其是在北京的高官们，他们对这一事件高度关注，纷纷要求当局尽快立案调查，找出幕后凶手，并严惩不贷。彭真虽然身陷争议，但他曾是政坛的重要人物，其离奇的死去让所有人都无法平静。此事不仅仅是一次简单的谋杀，更牵动了人心的种种疑云与悬念。\n\n谁会对彭真动手？背后隐藏着怎样的利益冲突？这一切，或许只能通过进一步的调查才能揭开神秘的面纱。而在这片风云变幻的政治舞台上，彭真不幸的死去，成为了新的纷争与猜疑的开始。"
  hunqingxi.3.a:0 "哼！很快你们也会和彭真一样"
  hunqingxi.4.t:0 "039号目标人物 李先念"
  hunqingxi.4.d:0 "李先念，字克念，湖北黄冈市黄安人，大革命失败期间毅然决然的加入党内，投身到湖南革命根据地的建设中。如今担任湖北省省委书记，不幸的是他在昨日早晨晨游时突发心脏病，被送入湖北省第一人民医院紧急抢救。有关方面动员了一切可用资源，并召集了全国的顶尖专家来救治李李先念同志，但依旧无济于事，他的生命不可挽回的走向衰败，医院无可奈何的宣布抢救无效。李先念同志的一生，是革命的一生、奋斗的一生、光辉的一生，是全心全意为人民服务的一生，是献身于工团主义事业的一生。他的逝世，是党和国家的重大损失。我们要化悲痛为力量，学习他的革命精神、崇高品德和优良作风，更加紧密地团结在以[HNN.GetLeader]同志为核心的党中央周围。"
