--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -101,9 +101,18 @@
  LEC_PRC: "中华苏维埃共和国"
  LEC_PRC_ADJ: "中国"
  LEC_PRC_DEF: "中国" 
- LEC_SOV: "苏维埃共产主义共和国联盟"
+ LEC_SOV: "苏维埃社会主义共和国联盟"
  LEC_SOV_ADJ: "苏联"
- LEC_SOV_DEF: "苏联" 
+ LEC_SOV_DEF: "苏联"
+ LEC_SOV_totalist: "苏维埃共产主义共和国联盟"
+ LEC_SOV_totalist_ADJ: "苏联"
+ LEC_SOV_totalist_DEF: "苏联"
+ LEC_SOV_syndicalist: "苏维埃劳工共和国联盟"
+ LEC_SOV_syndicalist_ADJ: "苏联"
+ LEC_SOV_syndicalist_DEF: "苏维埃劳工共和国联盟"
+ LEC_SOV_radical_socialist: "苏维埃社会主义共和国联盟"
+ LEC_SOV_radical_socialist_ADJ: "苏联"
+ LEC_SOV_radical_socialist_DEF: "苏维埃社会主义共和国联盟"
  LEC_GT_C: "中华公社"
  LEC_GT_C_ADJ: "中华公社"
  LEC_GT_C_DEF: "中华公社"
