--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1613,7 +1613,7 @@
  HNN_si_xiang_ying_ling_desc:0 "革命军队必须与无产阶级一起推翻资本家的政权。我们必然无法通过和平方式在革命斗争中取胜，而且在我党与国民党的第一次合作中，因为忽视了军队的争取，片面地着重于民众运动，从而和国民党一同在大革命失败后流散四方，甚至于连最初建立根据地都不如国民党轻松。而我军执行的政治任务是通过武装斗争推翻‘三座大山’、建立新中国，就是枪杆子里面出政权。"
  HNN_fa_zhan_zhong_gong_ye:0 "发展重工业"
  HNN_fa_zhan_zhong_gong_ye_desc:0 "为了解放全中国，仅有农业和轻工业是不足的。我们必须做好准备，在战争情况下，我们的工厂是远远不够的。我们必须重建军工复合体，使武器生产和重工业成为我们的优势。"  
- HNN_bu_tie_you_zhi_qi_ye:0 "补贴优质企业"
+ HNN_bu_tie_you_zhi_qi_ye:0 "人民军工业"
  HNN_bu_tie_you_zhi_qi_ye_desc:0 "尽管湖南积贫积弱，但是身为四战之地，湘军、直系、皖系、赵恒惕，他们为了维持自己的统治纷纷在湖南建立起了属于他们自己的军火企业，这些企业被我们接管后便迎来了社会主义改造。工人拥有工厂，工人管理工厂，这些军工企业摆脱了旧有官僚主义、资本主义障碍后必然将发展得更加繁荣。"  
  HNN_jun_shi_hua_qing_nan_tuan:0 "军事化青年团"
  HNN_jun_shi_hua_qing_nan_tuan_desc:0 "湖南社会主义青年团是汤芗铭时期毛泽东同志建立的一个地下组织用以吸纳进步青年。如今我们的主要任务发生了改变，青年团的主要也应当发生改变，青年团将用以培训那些有志参军的进步青年，他们将接受军事化教育，用以培训成最为出色的社会主义战士。" 
