--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -1089,6 +1089,8 @@
  SHX_experimental_school_concern_desc:0 "作为十年计划的早期阶段项目，山西建立了一所“乡村教育实验学校”，该校的校董会由阎锡山、冯玉祥和赵戴文本人负责。这所学校在内部而言相当成功，它从1933年成立之始就吸纳了有着不同家景的学生，并提供了简单而先进的农业课程。这所学校有着相当理想主义的目标：它要打破阶级偏见，现代化农业教育并结合理论学习与实际田野工作，可谓是凌云之志。乡村教育实验学校在省内省外都被大力宣传，以彰显山西统治者的开明进步，有人认为“作为实施村级经济建设的基石，他们将会成为组织群众的先锋并让乡郊变得焕然一新”。将乡村教育实验学校视作“十年计划”中最杰出的成就可以让计划的名声上升到新的高度，但此学校是否真的名副其实（而不仅仅是另一个橱窗宣传），将会在未来几年里揭晓。"
  SHX_shanxi_automobile_company_concern:0 "西北汽车运输公司"
  SHX_shanxi_automobile_company_concern_desc:0 "西北汽运集团是十年计划中建设国家资本主义议程所结出的硕果。其作为一家由政府支持的企业，得到了省政府的大力支持。这个更现代的新项目与冯玉祥曾建立的项目同名，并继承了前身的精神，却与其前身有着鲜明对比，因为其并不面向外国市场，而是专注于国内生产。该公司生产了大量的汽车、卡车和其他机动车辆，同时政府希望让国内中产而不是外国富人在山西刚刚翻修好的道路上开车。尽管在其产品质量方面的政府宣传看起来有些可疑，但政府的宣传确实推动了公司销售额的增长（尽管主要是在省内而不是出口）和其产业规模的扩张。以更长远的目光来看，政府希望能在汽车行业复制硫酸盐厂、铁厂和机床厂等国家项目的成功——这些项目本身发展并不是特别好，但有助于为未来的工业化培养一支训练有素的产业工人队伍。如果运气好的话，有朝一日山西也能拥有自己的繁荣的汽车工业。"
+ SHX_aircraft_design_board: "太原飞行器设计委员会"
+ SHX_aircraft_design_board_desc: "在太原兵工厂委员会、山西军事技术学校研究部和外国顾问的合作努力下，督理建立一支本地空军的计划因山西省生产本地设计飞行器的抱负而有了新的方向。受最近成功建立飞行器工厂的推动，新生的太原飞行器设计委员会反映着山西的凌云壮志飞得更高了。"
  SHX_northwest_industrial_company_concern:0 "西北实业公司"
  SHX_northwest_industrial_company_concern_desc:0 "西北实业公司是一间由政府主导的发展公司，其成立是让山西省政府发展当地重工业，并从国家资本主义过渡到国有社会主义。在于1932年成立后，此公司在五年间接收了超过二千万元的投资，它透过强制贷款从富裕地主手上获取了接近四成的资产，并曾强迫发电厂产出双倍电量以为其服务。西北实业公司控制了各个机床厂、机车厂及其他工厂，它代表着山西政府为改造这个贫穷落后地区所做的巨大投入。而此公司最近因另一个工业大计而重获生机，山西政府对西北实业公司的偏爱让它成为了当地工业计划的基石。"
  SHX_tung_chi_mining_concern:0 "通济矿业公司"
